syntax = "proto3";
package tendermint.cns.cns;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/tendermint/cns/x/cns/types";

//TODO(sahith): Add json and yaml flags
message ChainInfo{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  string chain_name = 1;
  int64  expiration = 2;
  string owner      = 3;

  string canonical_ibc_client = 4;

  repeated string seed       = 5;
  string source_code_url     = 6;
  VersionInfo version = 7;

  repeated cosmos.base.v1beta1.Coin fee  = 8 [(gogoproto.nullable) = false];
}

message VersionInfo{
  option (gogoproto.equal) = true;

  int64 version = 1;
  string source_commit_hash = 2;
  string genesis_hash = 3;
}
